Library and AOC 2015 are building successfully.